# neko_sama_downloader

./: .gitignore  Cargo.toml  How it work.md  README.md
.github/workflows/: rust.yml
src/: chrome.rs  chrome_spawn.rs  cmd_arg.rs  cmd_line_parser.rs  config.rs  help.rs  html_parser.rs  log_color.rs  main.rs  mod_file.rs  neko_process.rs  process_part1.rs  search.rs  search_engine.rs  static_data.rs  thread.rs  thread_pool.rs  utils.rs  utils_check.rs  utils_data.rs  vlc.rs  vlc_playlist_builder.rs  web.rs
src/chrome/: chrome_spawn.rs
src/cmd_arg/: cmd_line_parser.rs
src/mod_file/: chrome_parser.rs  chrome_spawn.rs  cmd_line_parser.rs  html_parser.rs  log_color.rs  process.rs  process_part1.rs  search.rs  static_data.rs  thread_pool.rs  utils_check.rs  utils_data.rs  vlc_playlist_builder.rs  web.rs
src/neko_process/: html_parser.rs  process.rs
src/search_engine/: search.rs
src/thread/: thread_pool.rs
src/utils/: log_color.rs  static_data.rs  utils_check.rs  utils_data.rs
src/web_client/: web.rs
