[package]
name = "neko_dl"
version = "0.15.3"
edition = "2021"
homepage = "https://github.com/CatAnnaDev/neko_sama_downloader"
repository = "https://github.com/CatAnnaDev/neko_sama_downloader"
readme = "README.md"
authors = ["CatAnnaDev"]
description = "neko-sama.fr downloader by episode or by saison"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
strip = true
codegen-units = 1

[profile.release.build-override]
opt-level = "z"
strip = true
codegen-units = 1

[dependencies]
indicatif = "0.17.8"
reqwest = "0.12.5"
clap = { version = "4.5.15", features = ["derive"] }
crossbeam = "0.8.4"
regex = "1.10.6"
quick-xml = "0.36.1"
tokio = { version = "1.38.2", features = ["full"] }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
serde_json = "1.0.124"
serde = { version = "1.0.207", features = ["derive"] }
requestty = "0.5.0"
m3u8-rs = "6.0.0"
http = "1.1.0"
futures = "0.3.30"
scraper = "0.20.0"